OS X: Add libarchive support, using OS X's native libarchive. Add references to get libarchive working, because OS X lacks the fmemopen call.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "macosx/SwiftAdditions"]
-	path = macosx/SwiftAdditions
+	path = macosx/Vendor/SwiftAdditions
 	url = https://github.com/MaddTheSane/SwiftMacTypes.git
+[submodule "macosx/Vendor/memorymapping"]
+	path = macosx/Vendor/memorymapping
+	url = https://github.com/NimbusKit/memorymapping.git
